# nix-py-music-bot

./: Dockerfile  main.py  pyproject.toml  replit.nix
