[tool.poetry]
name = "test-bot"
version = "0.1.0"
description = ""
authors = ["slava <sg230294@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "2.3.2"
python-dotenv = "^1.0.1"
yt-dlp = "^2024.3.10"
pynacl = "1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
